--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.11.3",
     "next": "15.3.2",
     "react": "^19.0.0",
